--- a/public/api-docs/v1/index.yaml
+++ b/public/api-docs/v1/index.yaml
@@ -1,42 +1,18 @@
 openapi: 3.0.3
 info:
-  title: Ensi Backend Skeleton (Replace me)
-  contact:
-    name: API Support
-    url: https://ensi.tech/contacts
-    email: mail@greensight.ru
+  title: News
   version: 1.0.0
-  description: Ensi Backend Skeleton Description (Replace me)
+  description: News service
 servers:
   - url: /api/v1
 tags:
-  - name: examples
-    description: Тэг-пример
+  - name: news
+    description: Новости
 paths:
-  /examples/{id}:
-    get:
-      tags:
-        - examples
-      operationId: getExample
-      x-lg-handler: 'App\Http\ApiV1\Modules\Foos\Controllers\FoosController@get'
-      x-lg-route-name: 'getExample'
-      x-lg-skip-request-generation: true
-      summary: Получение объекта типа Example
-      description: Получение объекта типа Example
-      parameters:
-        - $ref: '#/components/parameters/PathId'
-        - $ref: '#/components/parameters/QueryInclude'
-      responses:
-        #"200":
-          #description: Успешный ответ
-          # content:
-          #  application/json:
-          #    schema:
-          #      $ref: './customers.yaml#/CustomerResponse'
-        "404":
-          $ref: '#/components/responses/NotFound'
-        "500":
-          $ref: '#/components/responses/ServerError'
+  /news/news:
+    $ref: './news/paths.yaml#/News'
+  /news/news/{id}:
+    $ref: './news/paths.yaml#/NewsOne'
 components:
   parameters:
     QueryInclude:
